--- a/azure-pipelines/pr-build-solution.yml
+++ b/azure-pipelines/pr-build-solution.yml
@@ -6,7 +6,15 @@
 trigger: none
 
 pr:
-- master
+  branches:
+    include:
+    - master
+  paths:
+    include:
+    - azure-pipelines/*
+    - src/*
+    exclude:
+    - azure-pipelines/README.md
 
 pool:
   vmImage: 'vs2017-win2016'
